--- a/wrangler.toml
+++ b/wrangler.toml
@@ -14,7 +14,7 @@ binding = "R2"
 bucket_name = "twikoo"
 
 [vars]
-R2_PUBLIC_URL = "https://twikoo.wuxinrom.xyz"
+R2_PUBLIC_URL = "https://twikoo.497995.xyz"
 
 [dev]
 port = 5000
